--- a/tests/test_cases/2014/command_support.yaml
+++ b/tests/test_cases/2014/command_support.yaml
@@ -20,6 +20,8 @@ supported_commands_by_ecu:
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0114:O2S11,SHRTFT11
   - 0115:O2S12,SHRTFT11
+  - 0118:O2S21,SHRTFT21
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -43,6 +45,43 @@ supported_commands_by_ecu:
   - 014A:APP_E
   - 014C:TAC_PCT
   - 0152:ALCH_PCT
+  - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.0106:SHRTFT1
+  - 7E0.0107:LONGFT1
+  - 7E0.0108:SHRTFT2,SHRTFT4
+  - 7E0.0109:LONGFT2,LONGFT4
+  - 7E0.010A:FP
+  - 7E0.010B:MAP
+  - 7E0.010C:RPM
+  - 7E0.010E:SPARKADV
+  - 7E0.010F:IAT
+  - 7E0.0110:MAF
+  - 7E0.011C:OBDSUP
+  - 7E0.0123:FRP
+  - 7E0.012E:EVAP_PCT
+  - 7E0.012F:FLI
+  - 7E0.0131:CLR_DIST
+  - 7E0.0132:EVAP_VP
+  - 7E0.0133:BARO
+  - 7E0.013C:CATEMP11
+  - 7E0.013D:CATEMP21
+  - 7E0.0143:LOAD_ABS
+  - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.014C:TAC_PCT
+  - 7E0.0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 7E0.7E8.22000D:SIERRA1500_VSS
   "7E2":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
+unsupported_commands_by_ecu:
+  "7E0":
+  - 7E0.7E8.22248E:SIERRA1500_TP_FL
+  - 7E0.7E8.22248F:SIERRA1500_TP_FR
+  - 7E0.7E8.222490:SIERRA1500_TP_RR
+  - 7E0.7E8.222491:SIERRA1500_TP_RL
+  - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
+  - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
