--- a/tests/test_cases/2014/commands/7E0.0104.yaml
+++ b/tests/test_cases/2014/commands/7E0.0104.yaml
@@ -1,6 +1,15 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 0
+  response: '7E803410400'
+- expected_values:
+    LOAD_PCT: 16.47059
+  response: 7E80341042A
+- expected_values:
+    LOAD_PCT: 16.86275
+  response: 7E80341042B
+- expected_values:
     LOAD_PCT: 17.2549
   response: 7E80341042C
 - expected_values:
