--- a/tests/test_cases/2014/commands/7E0.0110.yaml
+++ b/tests/test_cases/2014/commands/7E0.0110.yaml
@@ -1,6 +1,15 @@
 command_id: 7E0.0110
 test_cases:
 - expected_values:
+    MAF: 0
+  response: '7E80441100000'
+- expected_values:
+    MAF: 5.44
+  response: '7E80441100220'
+- expected_values:
+    MAF: 5.52
+  response: '7E80441100228'
+- expected_values:
     MAF: 5.7
   response: 7E8044110023A
 - expected_values:
