--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -112,14 +112,18 @@ unsupported_commands_by_ecu:
   - DB33.014A:APP_E
   - DB33.014C:TAC_PCT
   - DB33.0151:FUEL_TYP
+  - DB33.015D:FUEL_TIMING
   - DB33.0161:TQ_DD
   - DB33.0162:TQ_ACT
   - DB33.0163:TQ_REF
+  - DB33.0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - DB33.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - DB33.0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   - DB33.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - DB33.016B:EGRTA,EGRTA_SUP,EGRTA_WIDE,EGRTA_WR_SUP,EGRTB,EGRTB_SUP,EGRTB_WIDE,EGRTB_WR_SUP,EGRTC,EGRTC_SUP,EGRTC_WIDE,EGRTC_WR_SUP,EGRTD,EGRTD_SUP,EGRTD_WIDE,EGRTD_WR_SUP
   - DB33.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
   - DB33.0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - DB33.017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
   - DB33.018E:TQ_FR
   - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
   - DB33.019E:EXH_RATE
