--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -3,3 +3,30 @@ test_cases:
 - expected_values:
     LOAD_PCT: 20
   response: '7E803410433'
+- expected_values:
+    LOAD_PCT: 22.35294
+  response: '7E803410439'
+- expected_values:
+    LOAD_PCT: 23.13725
+  response: 7E80341043B
+- expected_values:
+    LOAD_PCT: 24.31373
+  response: 7E80341043E
+- expected_values:
+    LOAD_PCT: 30.98039
+  response: 7E80341044F
+- expected_values:
+    LOAD_PCT: 32.94118
+  response: '7E803410454'
+- expected_values:
+    LOAD_PCT: 38.82353
+  response: '7E803410463'
+- expected_values:
+    LOAD_PCT: 41.17647
+  response: '7E803410469'
+- expected_values:
+    LOAD_PCT: 45.09804
+  response: '7E803410473'
+- expected_values:
+    LOAD_PCT: 45.88235
+  response: '7E803410475'
