--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
-    LOAD_PCT: 20
-  response: '7E803410433'
+    LOAD_PCT: 0
+  response: '7E803410400'
+- expected_values:
+    LOAD_PCT: 49.01961
+  response: 7E80341047D
