--- a/tests/test_cases/2021/commands/7E0.0144.yaml
+++ b/tests/test_cases/2021/commands/7E0.0144.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.65724
+  response: '7E80441445420'
+- expected_values:
+    EQ_RAT: 0.66407
+  response: '7E80441445500'
+- expected_values:
     EQ_RAT: 1.99
   response: 7E8044144FFFF
