--- a/tests/test_cases/2014/commands/7E0.0144.yaml
+++ b/tests/test_cases/2014/commands/7E0.0144.yaml
@@ -1,5 +1,14 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.54981
+  response: '7E80441444660'
+- expected_values:
+    EQ_RAT: 0.70216
+  response: 7E804414459E0
+- expected_values:
+    EQ_RAT: 0.96876
+  response: 7E80441447C00
+- expected_values:
     EQ_RAT: 1.00002
   response: '7E80441448000'
