--- a/tests/test_cases/2014/commands/7E0.012F.yaml
+++ b/tests/test_cases/2014/commands/7E0.012F.yaml
@@ -1,5 +1,18 @@
 command_id: 7E0.012F
 test_cases:
 - expected_values:
-    FLI: 35.29412
-  response: 7E803412F5A
+    FLI: 4.31373
+  response: |-
+    012F1
+    7E803412F0B
+- expected_values:
+    FLI: 7.05882
+  response: |-
+    012F1
+    7E803412F12
+- expected_values:
+    FLI: 0.39216
+  response: 7E803412F01
+- expected_values:
+    FLI: 51.76471
+  response: 7E803412F84
